--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slack-clone",
-  "homepage": "http://ayush855-cloud.github.io/SlackClone",
+  "homepage": "http://ayush855-cloud.github.io/Chatapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
